@@ -1,0 +1,34 @@
+-----------------------------------------------------------------------
+>>> Trace of /home/hrocha/Documents/Projects_DEV/map2check_git/Map2Check-Fortes/code_samples/samples/D_CBMC_bound_array.c
+>>> Generated at 2014-10-02 13:48:17.136152
+
+Counter-example - Trace Log: 
+   #	|      Address	    | Address points to	| Function ID	|  IS DYNAMIC	|   Set FREE 	| IS UNION 	| Line 		| Var Value
+   1	|           0x604110|              (nil)|    0		|    0		|    0		|    0		|    8		|    0		
+   2	|           0x6040f0|              (nil)|    0		|    0		|    0		|    0		|    8		|    0		
+   3	|     0x7fff779cd5ac|              (nil)|    2		|    0		|    0		|    0		|   23		|    0		
+   4	|     0x7fff779cd5a8|              (nil)|    2		|    0		|    0		|    0		|   24		|    0		
+   5	|     0x7fff779cd5a4|              (nil)|    2		|    0		|    0		|    0		|   24		| 32767		
+   6	|     0x7fff779cd5a0|              (nil)|    2		|    0		|    0		|    0		|   24		| 2006767248		
+   7	|     0x7fff779cd59e|              (nil)|    2		|    0		|    0		|    0		|   25		| 65535		
+   8	|     0x7fff779cd59e|              (nil)|    2		|    0		|    0		|    0		|   26		| 11111		
+   9	|     0x7fff779cd53c|              (nil)|    1		|    0		|    0		|    0		|   11		|    3		
+  10	|     0x7fff779cd54f|              (nil)|    1		|    0		|    0		|    0		|   12		|    0		
+  11	|     0x7fff779cd54e|              (nil)|    1		|    0		|    0		|    0		|   12		|    0		
+  12	|     0x7fff779cd548|              (nil)|    1		|    0		|    0		|    0		|   13		| 28078480		
+  13	|           0x604110|              (nil)|    1		|    0		|    0		|    0		|   15		|    0		
+  14	|           0x604110|              (nil)|    1		|    0		|    0		|    0		|   15		|    0		
+  15	|           0x604110|              (nil)|    1		|    0		|    0		|    0		|   15		|    0		
+  16	|           0x604110|              (nil)|    1		|    0		|    0		|    0		|   15		|    0		
+  17	|           0x604110|              (nil)|    1		|    0		|    0		|    0		|   15		|    0		
+  18	|     0x7fff779cd54f|              (nil)|    1		|    0		|    0		|    0		|   17		|    &		
+  19	|     0x7fff779cd590|          0x1ac7490|    2		|    1		|    0		|    0		|   29		| 28079248		
+  20	|           0x604110|              (nil)|    2		|    0		|    0		|    0		|   31		|    1		
+  21	|     0x7fff779cd5a0|              (nil)|    2		|    0		|    0		|    0		|   32		|    1		
+
+ [Failed]
+ VIOLATED PROPERTY: Claim 11 
+ 	 Location at original code in line: 34 
+ 	 Comments:   array `b' lower bound
+ 
+D_CBMC_bound_array__mcf_new._mcf2check: D_CBMC_bound_array__mcf_new.c:95: main: Assertion `(intptr_t)i - 1 >= 0' failed.
